--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-keyboard": "^3.0.2",
     "ember-load-initializers": "^1.1.0",
-    "ember-localstorage-adapter": "https://github.com/ivanvotti/ember-localstorage-adapter",
+    "ember-localstorage-adapter": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.7.0",
     "ember-native-dom-helpers": "^0.6.2",
