--- a/package.json
+++ b/package.json
@@ -3,46 +3,47 @@
   "version": "0.0.1",
   "private": true,
   "description": "A clone of the Cultured Code Things app",
+  "repository": "",
   "license": "MIT",
   "author": "Ivan Votti <ivanvotti@gmail.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
   "scripts": {
     "build": "ember build",
+    "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test"
   },
   "devDependencies": {
-    "@ember/optional-features": "^0.6.1",
+    "@ember/jquery": "^0.5.2",
+    "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
     "ember-animated": "^0.3.1",
     "ember-attacher": "^0.13.7",
     "ember-auto-import": "^1.2.3",
     "ember-autoresize": "^1.3.2",
     "ember-basic-dropdown": "^1.0.3",
-    "ember-cli": "~3.3.0",
-    "ember-cli-app-version": "^3.0.0",
-    "ember-cli-babel": "^6.6.0",
-    "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.2.1",
-    "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli": "~3.4.4",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-babel": "^6.16.0",
+    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-eslint": "^4.2.3",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-postcss": "^4.0.0",
     "ember-cli-qunit": "^4.3.2",
-    "ember-cli-shims": "^1.2.0",
-    "ember-cli-sri": "^2.1.0",
+    "ember-cli-sri": "^2.1.1",
     "ember-cli-stylelint": "^2.1.0",
-    "ember-cli-template-lint": "^0.7.6",
-    "ember-cli-uglify": "^2.0.0",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-uglify": "^2.1.0",
     "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.8.19",
-    "ember-data": "~3.3.0",
+    "ember-data": "~3.4.0",
     "ember-data-factory-guy": "^3.3.0",
     "ember-elsewhere": "^1.0.5",
     "ember-export-application-global": "^2.0.0",
@@ -54,20 +55,20 @@
     "ember-native-dom-helpers": "^0.6.2",
     "ember-power-calendar": "^0.9.1",
     "ember-power-calendar-moment": "^0.1.3",
-    "ember-resolver": "^4.0.0",
+    "ember-resolver": "^5.0.1",
     "ember-route-action-helper": "^2.0.6",
     "ember-sortable": "^1.11.2",
-    "ember-source": "~3.3.0",
+    "ember-source": "~3.4.0",
     "ember-svg-jar": "^1.2.0",
     "ember-test-selectors": "^1.0.0",
     "ember-truth-helpers": "^2.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-import": "^2.13.0",
-    "loader.js": "^4.2.3",
+    "loader.js": "^4.7.0",
     "narwin-pack": "^1.1.1",
     "postcss-functions": "^3.0.0",
-    "qunit-dom": "^0.7.0",
+    "qunit-dom": "^0.7.1",
     "sinon": "^6.1.4",
     "stylelint-config-standard": "^18.2.0"
   },
