--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
     "ember-animated": "^0.3.1",
     "ember-attacher": "^0.13.7",
-    "ember-auto-import": "^1.2.3",
     "ember-autoresize": "^1.3.2",
     "ember-basic-dropdown": "^1.0.3",
     "ember-cli": "~3.4.4",
@@ -62,6 +62,7 @@
     "ember-svg-jar": "^1.2.0",
     "ember-test-selectors": "^1.0.0",
     "ember-truth-helpers": "^2.0.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-import": "^2.13.0",
@@ -70,6 +71,7 @@
     "postcss-functions": "^3.0.0",
     "qunit-dom": "^0.7.1",
     "sinon": "^6.1.4",
+    "stylelint": "^8.3.0",
     "stylelint-config-standard": "^18.2.0"
   },
   "engines": {
