--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
-    "ember-animated": "^0.3.1",
+    "ember-animated": "^0.4.0",
     "ember-attacher": "^0.13.7",
     "ember-autoresize": "^1.3.2",
     "ember-basic-dropdown": "^1.0.3",
-    "ember-cli": "~3.4.4",
+    "ember-cli": "~3.6.1",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^6.16.0",
+    "ember-cli-babel": "^7.1.2",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
@@ -36,29 +36,30 @@
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-postcss": "^4.0.0",
-    "ember-cli-qunit": "^4.3.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-stylelint": "^2.1.0",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-composable-helpers": "^2.1.0",
-    "ember-concurrency": "^0.8.19",
-    "ember-data": "~3.4.0",
+    "ember-concurrency": "^0.8.27",
+    "ember-data": "~3.6.0",
     "ember-data-factory-guy": "^3.3.0",
     "ember-elsewhere": "^1.0.5",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^5.0.0",
     "ember-keyboard": "^3.0.2",
     "ember-load-initializers": "^1.1.0",
     "ember-local-storage": "~1.4.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.7.0",
     "ember-native-dom-helpers": "^0.6.2",
-    "ember-power-calendar": "^0.9.1",
+    "ember-power-calendar": "^0.9.7",
     "ember-power-calendar-moment": "^0.1.3",
+    "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
-    "ember-route-action-helper": "^2.0.6",
+    "ember-route-action-helper": "^2.0.8",
     "ember-sortable": "^1.11.2",
-    "ember-source": "~3.4.0",
+    "ember-source": "~3.6.0",
     "ember-svg-jar": "^1.2.0",
     "ember-test-selectors": "^1.0.0",
     "ember-truth-helpers": "^2.0.0",
@@ -69,15 +70,13 @@
     "loader.js": "^4.7.0",
     "narwin-pack": "^1.1.1",
     "postcss-functions": "^3.0.0",
-    "qunit-dom": "^0.7.1",
+    "qunit-dom": "^0.8.0",
     "sinon": "^6.1.4",
     "stylelint": "^8.3.0",
-    "stylelint-config-standard": "^18.2.0"
+    "stylelint-config-standard": "^18.2.0",
+    "yetch": "^1.1.1"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
-  },
-  "dependencies": {
-    "ember-fetch": "^5.0.0"
   }
 }
