--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ember-elsewhere": "^1.0.5",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^5.0.0",
+    "ember-i18n": "^5.3.1",
     "ember-keyboard": "^3.0.2",
     "ember-load-initializers": "^1.1.0",
     "ember-local-storage": "~1.4.0",
