--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-postcss": "^4.0.0",
+    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-stylelint": "^2.1.0",
     "ember-cli-template-lint": "^1.0.0-beta.1",
@@ -50,10 +51,10 @@
     "ember-i18n": "^5.3.1",
     "ember-keyboard": "^3.0.2",
     "ember-load-initializers": "^1.1.0",
-    "ember-local-storage": "~1.4.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.7.0",
     "ember-native-dom-helpers": "^0.6.2",
+    "ember-pouch": "3.2.2",
     "ember-power-calendar": "^0.9.7",
     "ember-power-calendar-moment": "^0.1.3",
     "ember-qunit": "^3.4.1",
