--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,6 @@
   "name": "things",
   "dependencies": {
     "pouchdb": "^5.4.5",
-    "relational-pouch": "^1.4.4",
-    "pouchdb-authentication": "^1.1.3"
+    "relational-pouch": "^1.4.4"
   }
 }
